--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
 
     <!--Création du menu de navigation-->
     <nav>
-        <a href="index.html" title="Lien page d'accueil" class="nav-active">Accueil</a>
-        <a href="about.html" title="Lien page à propos">Notre histoire</a>
+        <a href="index.html" title="Lien page d'accueil">Accueil</a>
+        <a href="about.html" title="Lien page à propos" class="nav_active">Notre histoire</a>
         <a href="adopter.html" title="Lien page adopter">Coin des coups de cœur</a>
         <a href="menu.html" title="Lien page menu">Petites douceurs</a>
         <a href="contact.html" title="Lien page contact">Contactez-nous !</a>
@@ -35,27 +35,27 @@
     <!--Création du contenu-->
     <main>
         <div>
-            <h2>L’histoire du Chat-Mallow Café 🐾</h2>
+            <h1>L'histoire du Chat-Mallow Café</h1>
 
-            <p>Le Chat-Mallow Café, c’est d’abord une aventure de famille, née d’un amour inconditionnel pour les chats…
+            <p>Le Chat-Mallow Café, c'est d'abord une aventure de famille, née d'un amour inconditionnel pour les chats…
                 et les
                 goûters gourmands.</p>
 
             <p>Au départ, il y a moi, Chloé. Jeune trentenaire rêveuse, j'ai longtemps cherché un moyen de concilier mes
                 deux
-                passions : les animaux, et la création d’un lieu doux et réconfortant. Inspirée par les cat cafés
+                passions : les animaux, et la création d'un lieu doux et réconfortant. Inspirée par les cat cafés
                 japonais, j'ai
                 décidé de me lancer, accompagnée de ma maman Christelle et de ma petite sœur Cassandra.</p>
 
-            <p>Ensemble, nous avons imaginé un espace chaleureux, où l’on pourrait venir se poser autour d’un bon café
+            <p>Ensemble, nous avons imaginé un espace chaleureux, où l'on pourrait venir se poser autour d'un bon café
                 tout en
                 offrant une seconde chance à des chats sans famille. Rapidement, le projet a pris vie grâce à des
                 partenariats
                 solides avec plusieurs refuges et associations locales, qui nous confient régulièrement des chats
                 sociables à la
-                recherche d’un foyer aimant.</p>
+                recherche d'un foyer aimant.</p>
 
-            <p>Aujourd’hui, le Chat-Mallow Café, c’est bien plus que ça : c’est une passerelle entre le monde des
+            <p>Aujourd'hui, le Chat-Mallow Café, c'est bien plus que ça : c'est une passerelle entre le monde des
                 humains et
                 celui des félins, un petit havre de paix où chaque ronron compte.</p><br>
 
