--- a/adopter.html
+++ b/adopter.html
@@ -24,9 +24,9 @@
 
     <!--Création du menu de navigation-->
     <nav>
-        <a href="index.html" title="Lien page d'accueil" class="nav-active">Accueil</a>
+        <a href="index.html" title="Lien page d'accueil">Accueil</a>
         <a href="about.html" title="Lien page à propos">Notre histoire</a>
-        <a href="adopter.html" title="Lien page adopter">Coin des coups de cœur</a>
+        <a href="adopter.html" title="Lien page adopter" class="nav_active">Coin des coups de cœur</a>
         <a href="menu.html" title="Lien page menu">Petites douceurs</a>
         <a href="contact.html" title="Lien page contact">Contactez-nous !</a>
     </nav>
@@ -34,7 +34,7 @@
 
     <!--Création du contenu-->
     <main>
-        <h2>Le coin de coups de cœur</h2>
+        <h1>Le coin des coups de cœur</h1>
 
         <p>Ils cherchent une famille pour la vie. Ça pourrait être la vôtre !</p>
 
@@ -70,18 +70,18 @@
         <div>
             <h2>🏠 Adopter un chat du Chat-Mallow Café</h2>
 
-            Tous les chats présents au Chat-Mallow Café sont issus de refuges partenaires et sont en attente d’une
-            famille aimante. Si vous avez un coup de cœur pour l’un d’eux, il est possible d’envisager une adoption !
+            Tous les chats présents au Chat-Mallow Café sont issus de refuges partenaires et sont en attente d'une
+            famille aimante. Si vous avez un coup de cœur pour l'un d'eux, il est possible d'envisager une adoption !
             <h3>📋 Comment ça se passe ?</h3>
 
             <ul>
                 <li>Prenez le temps de faire connaissance : nous vous encourageons à passer plusieurs moments avec le
-                    chat, pour vous assurer qu’il correspond à votre mode de vie.</li>
-                <li>Discutez avec l’équipe : nous vous mettrons en relation avec l’association qui en a la charge. Elle
-                    se chargera du plus gros du processus d’adoption.</li>
-                <li>Une adoption responsable : chaque adoption fait l’objet d’un questionnaire, parfois d’une visite
-                    pré-adoption, et d’un contrat. Les frais d’adoption couvrent généralement les soins, la
-                    stérilisation et l’identification.</li>
+                    chat, pour vous assurer qu'il correspond à votre mode de vie.</li>
+                <li>Discutez avec l'équipe : nous vous mettrons en relation avec l'association qui en a la charge. Elle
+                    se chargera du plus gros du processus d'adoption.</li>
+                <li>Une adoption responsable : chaque adoption fait l'objet d'un questionnaire, parfois d'une visite
+                    pré-adoption, et d'un contrat. Les frais d'adoption couvrent généralement les soins, la
+                    stérilisation et l'identification.</li>
             </ul>
 
             <h3>❤️ Notre priorité : le bien-être des chats</h3>
@@ -89,26 +89,26 @@
             Nous nous assurons que chaque adoption est faite en conscience et dans la durée. Les chats ne sont pas « à
             donner » sur un coup de tête, mais adoptés dans le respect de leur caractère et de leurs besoins.
 
-            <h2>❓ FAQ – Adoption au Chat-Mallow Café</h2>
+            <h2>❓ FAQ — Adoption au Chat-Mallow Café</h2>
 
             <h3>🧾 Combien coûte une adoption ?</h3>
-            Les frais d’adoption varient selon l'association, mais ils couvrent généralement la stérilisation, les
-            vaccins, l’identification, et parfois une visite vétérinaire. Comptez en moyenne entre 100 et 150 €.
+            Les frais d'adoption varient selon l'association, mais ils couvrent généralement la stérilisation, les
+            vaccins, l'identification, et parfois une visite vétérinaire. Comptez en moyenne entre 100 et 150 €.
 
             <h3>⏳ Peut-on repartir avec un chat le jour même ?</h3>
-            Non. Le processus d’adoption passe toujours par l’association partenaire : un délai est nécessaire pour
-            remplir le questionnaire, vérifier les conditions d’accueil et valider l’adoption.
+            Non. Le processus d'adoption passe toujours par l'association partenaire : un délai est nécessaire pour
+            remplir le questionnaire, vérifier les conditions d'accueil et valider l'adoption.
 
-            <h3>👨‍👩‍👧 Est-ce qu’on peut adopter si on a des enfants ou d’autres animaux ?</h3>
-            Bien sûr ! Mais cela dépend du chat. Certains auront plutôt besoin d'un foyer calme, d’autres sont très
+            <h3>👨‍👩‍👧 Est-ce qu'on peut adopter si on a des enfants ou d'autres animaux ?</h3>
+            Bien sûr ! Mais cela dépend du chat. Certains auront plutôt besoin d'un foyer calme, d'autres sont très
             sociables. Nous vous orienterons vers les profils les plus adaptés à votre situation.
 
             <h3>📄 Que faut-il prévoir pour adopter ?</h3>
             Un peu de temps, de réflexion, et de quoi accueillir le chat : bac à litière, gamelles, griffoir,
-            nourriture… Et surtout, beaucoup d’amour et de patience.
+            nourriture… Et surtout, beaucoup d'amour et de patience.
 
             <h3>🔁 Et si ça ne se passe pas bien ?</h3>
-            Un suivi post-adoption est prévu. Si jamais l’intégration pose problème, l’association peut vous conseiller,
+            Un suivi post-adoption est prévu. Si jamais l'intégration pose problème, l'association peut vous conseiller,
             et un retour est possible dans certains cas, pour ne pas mettre le chat en difficulté.
         </div>
     </main>
