--- a/contact.html
+++ b/contact.html
@@ -24,11 +24,11 @@
 
     <!--Création du menu de navigation-->
     <nav>
-        <a href="index.html" title="Lien page d'accueil" class="nav-active">Accueil</a>
+        <a href="index.html" title="Lien page d'accueil">Accueil</a>
         <a href="about.html" title="Lien page à propos">Notre histoire</a>
         <a href="adopter.html" title="Lien page adopter">Coin des coups de cœur</a>
         <a href="menu.html" title="Lien page menu">Petites douceurs</a>
-        <a href="contact.html" title="Lien page contact">Contactez-nous !</a>
+        <a href="contact.html" title="Lien page contact" class="nav_active">Contactez-nous !</a>
     </nav>
     <!--Fin du menu de nav-->
 
@@ -37,7 +37,7 @@
 
         <section id="contact" class="text-center">
 
-            <h2>Quelque chose à nous dire ?</h2>
+            <h1 class="text-center">Quelque chose à nous dire ?</h1>
 
             <form>
                 <label>Nom *</label>
@@ -50,9 +50,9 @@
                 <input type="tel" placeholder="Saisissez votre téléphone...">
                 <label>Message *</label>
                 <textarea required placeholder="Saisissez votre message..." rows="5"></textarea>
-                <div><input type="checkbox" name="check"> En cochant cette case vous acceptez le traitrement de vos
+                <div><input type="checkbox" name="check"> En cochant cette case vous acceptez le traitement de vos
                     données
-                    personnelles et notre politique de confidentitialité.
+                    personnelles et notre politique de confidentialité.
                     <p><i>* Les champs marqués par ce symbole sont obligatoires.</i></p>
                 </div>
                 <input type="submit" class="bouton_form" value="Envoyer">
