--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!--Création du menu de navigation-->
     <nav>
-        <a href="index.html" title="Lien page d'accueil" class="nav-active">Accueil</a>
+        <a href="index.html" title="Lien page d'accueil" class="nav_active">Accueil</a>
         <a href="about.html" title="Lien page à propos">Notre histoire</a>
         <a href="adopter.html" title="Lien page adopter">Coin des coups de cœur</a>
         <a href="menu.html" title="Lien page menu">Petites douceurs</a>
@@ -35,18 +35,14 @@
     <!--Création du contenu-->
     <main>
         <div>
-            <h1>Bienvenue</h1> au <b>Chat-Mallow Café</b>, un lieu doux et chaleureux à Béthune où les chats sont rois…
-            et
-            les humains
-            aussi !
-            Ici, vous pouvez déguster un café, un thé ou une pâtisserie tout en partageant un moment paisible avec nos
-            chats
-            résidents. Tous les chats que vous croiserez sont issus de refuges et proposés à l’adoption : vous pouvez
-            repartir avec un coup de cœur à quatre pattes.
-            Notre mission ? Offrir une seconde chance à ces petits félins tout en créant un lieu de détente unique pour
-            nos
-            visiteurs. 🐾<br>
-            Nous nous ferons un plaisir de vous accueillir du <b>mardi au samedi, de 13h à 18h.</b>
+            <h1>Bienvenue au Chat-Mallow Café !</h1>
+            <p>Un lieu doux et chaleureux à Béthune où les chats sont rois… et les humains aussi ! Ici, vous pouvez
+                déguster un bon café, un thé ou une pâtisserie maison tout en partageant un moment paisible avec nos
+                chats résidents. Tous les chats que vous croiserez sont issus de refuges et proposés à l'adoption : vous
+                pouvez repartir avec un coup de cœur à quatre pattes. Notre mission ? Offrir une seconde chance à ces
+                petits félins tout en créant un lieu de détente unique pour nos visiteurs. 🐾<br>
+                Nous nous ferons un plaisir de vous accueillir au <b>48 Grand Place à Béthune</b>, du <b>mardi au
+                    samedi, de 13h à 18h.</b></p>
         </div><br>
         <div>
             <h2>Quelques règles de douceur (et de sécurité)</h2>
@@ -56,23 +52,23 @@
             <ul>
 
                 <li>Les chats ne doivent pas être forcés, ni dérangés : laissez-les venir à vous.</li>
-                <li>Ne soulevez pas les chats sans l’accord de l’équipe.</li>
+                <li>Ne soulevez pas les chats sans l'accord de l'équipe.</li>
                 <li>Les enfants sont les bienvenus, mais doivent être accompagnés et surveillés en permanence.</li>
                 <li>Pas de nourriture pour les chats : leur régime est adapté à leurs besoins.</li>
-                <li>Merci de parler doucement et de ne pas courir dans l’espace café.</li>
+                <li>Merci de parler doucement et de ne pas courir dans l'espace café.</li>
 
             </ul>
 
-            Respecter ces règles, c’est offrir un environnement serein à nos chats… et à vous-même. 🧘‍♀️
+            Respecter ces règles, c'est offrir un environnement serein à nos chats… et à vous-même. 🧘‍♀️
         </div><br>
 
         <div>
             <h2>Une touche en plus : “Le coin des coups de cœur”</h2>
 
-            Envie d’adopter ? Consultez notre “Coin des coups de cœur”, une liste de nos chats actuellement disponibles.
+            Envie d'adopter ? Consultez notre “Coin des coups de cœur”, une liste de nos chats actuellement disponibles.
             Vous y trouverez :
             <ul>
-                <li>Le portrait de chaque chat (avec son caractère et ses préférences),</li>
+                <li>Une photo de chaque chat,</li>
                 <li>Les modalités d'adoption,</li>
                 <li>Et une fiche à remplir si le coup de foudre est réciproque 💕</li>
             </ul>
@@ -85,7 +81,7 @@
             Au Chat-Mallow Café, nous vous proposons une sélection de boissons chaudes (ou pas !), cafés de spécialité,
             thés parfumés, ainsi que de délicieuses pâtisseries faites maison (dont certaines vegan).
             Pour le confort de tous et le bien-être des chats, votre temps au café est basé sur la consommation :
-            au-delà d’une heure sur place, une nouvelle consommation est demandée. Cela nous permet de garantir un
+            au-delà d'une heure sur place, une nouvelle consommation est demandée. Cela nous permet de garantir un
             accueil chaleureux à chaque visiteur — humain ou félin ! ☕
         </div>
     </main>
