--- a/menu.html
+++ b/menu.html
@@ -24,17 +24,17 @@
 
     <!--Création du menu de navigation-->
     <nav>
-        <a href="index.html" title="Lien page d'accueil" class="nav-active">Accueil</a>
+        <a href="index.html" title="Lien page d'accueil">Accueil</a>
         <a href="about.html" title="Lien page à propos">Notre histoire</a>
         <a href="adopter.html" title="Lien page adopter">Coin des coups de cœur</a>
-        <a href="menu.html" title="Lien page menu">Petites douceurs</a>
+        <a href="menu.html" title="Lien page menu" class="nav_active">Petites douceurs</a>
         <a href="contact.html" title="Lien page contact">Contactez-nous !</a>
     </nav>
     <!--Fin du menu de nav-->
 
     <!--Création du contenu-->
     <main>
-        <div class="h2_center">Menu du Chat-Mallow Café</div><br>
+        <h1 class="text-center">Menu du Chat-Mallow Café</h1><br>
 
         <section id="menu">
             <div class="hot">
