--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             <p>Ils ont été les premiers à faire ronronner les fauteuils du Chat-Mallow Café…</p>
         </div>
 
-        <div class="about_cats">
+        <div class="about_cats_about">
             <div class="cat_card">
                 <a href="media/about1.jpg" target="_blank">
                     <div class="image_wrapper">
