--- a/adopter.html
+++ b/adopter.html
@@ -38,7 +38,7 @@
 
         <p>Ils cherchent une famille pour la vie. Ça pourrait être la vôtre !</p>
 
-        <div class="about_cats">
+        <div class="about_cats_adopt">
             <div class="cats_card">
                 <a href="media/adopt1.png" target="_blank">
                     <div class="image_wrapper">
