--- a/menu.html
+++ b/menu.html
@@ -83,8 +83,7 @@
         </section>
 
         <div class="center_menu">
-            <p>🥛 Toutes nos boissons chaudes peuvent être accompagnées de lait végétal (amande, avoine, soja) sans
-                supplément.</p>
+            <p>🥛 Toutes nos boissons chaudes peuvent être accompagnées de lait végétal (amande, avoine, ou soja) sans supplément.</p>
             <p>💧 Et bien sûr, de l'eau fraîche est toujours disponible gratuitement.</p>
             <img src="media/LOGO_FAITMAISON_clair_WEB.png" title="Logo Fait Maison" alt="Logo Fait Maison">
         </div>
