--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@
                 chats résidents. Tous les chats que vous croiserez sont issus de refuges et proposés à l'adoption : vous
                 pouvez repartir avec un coup de cœur à quatre pattes. Notre mission ? Offrir une seconde chance à ces
                 petits félins tout en créant un lieu de détente unique pour nos visiteurs. 🐾</p>
-                <p>Nous nous ferons un plaisir de vous accueillir au <b>48 Grand Place à Béthune</b>, du <b>mardi au
+            <p>Nous nous ferons un plaisir de vous accueillir au <b>48 Grand Place à Béthune</b>, du <b>mardi au
                     samedi, de 13h à 18h.</b></p>
         </div><br>
-<div class="map">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d798.8578792608215!2d2.6354306480950345!3d50.530156261891705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dd225ea717dfa3%3A0xbc5e227ff8dcd292!2sNautilus!5e0!3m2!1sfr!2sfr!4v1747313015381!5m2!1sfr!2sfr" width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div><br>
+        <div class="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d798.8578792608215!2d2.6354306480950345!3d50.530156261891705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dd225ea717dfa3%3A0xbc5e227ff8dcd292!2sNautilus!5e0!3m2!1sfr!2sfr!4v1747313015381!5m2!1sfr!2sfr"
+                width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+                title="Carte Google Maps pour trouver le Chat-Mallow Café à Béthune"></iframe>
+        </div><br>
 
         <div>
             <h2>Quelques règles de douceur (et de sécurité)</h2>
