--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
 
     <!--Création du contenu-->
     <main>
-        <h1 class="text-center">Menu du Chat-Mallow Café</h1><br>
+        <h1 class="text-center">Notre menu</h1><br>
 
         <section id="menu">
             <div class="hot">
