--- a/menu.html
+++ b/menu.html
@@ -40,45 +40,47 @@
             <div class="hot">
                 <h3>☕ Boissons chaudes</h3>
 
-                <p>Café filtre bio – 2,50 €</p>
-                <p>Espresso / Double espresso – 2,00 € / 3,00 €</p>
-                <p>Cappuccino crémeux – 3,80 €</p>
-                <p>Latte vanille / noisette / caramel – 4,20 €</p>
-                <p>Chocolat chaud maison (avec ou sans chantilly) – 4,00 €</p>
-                <p>Matcha / Chaï latte – 4,50 €</p>
-                <p>Thé en vrac (sélection changeante) – 3,50 €</p>
+                <p>Café filtre bio - 2,50 €</p>
+                <p>Espresso - 2,00 €</p>
+                <p>Double espresso - 3,00 €</p>
+                <p>Cappuccino crémeux - 3,80 €</p>
+                <p>Latte vanille / noisette / caramel - 4,20 €</p>
+                <p>Chocolat chaud maison (avec ou sans chantilly) - 4,00 €</p>
+                <p>Matcha / Chaï latte - 4,50 €</p>
+                <p>Thé en vrac - 3,50 €</p>
             </div>
 
             <div class="cold">
                 <h3>❄️ Boissons fraîches</h3>
 
-                <p>Thé glacé maison (citron ou pêche) – 3,50 €</p>
-                <p>Limonade artisanale – 3,80 €</p>
-                <p>Jus bio (pomme, poire, orange) – 3,80 €</p>
-                <p>Bière sans alcool (blonde ou blanche) – 4,00 €</p>
-                <p>Boissons végétales froides (matcha, chocolat, café glacé) – 4,50 €</p>
-                <p>Eau pétillante – 3,00 €</p>
+                <p>Thé glacé maison (citron ou pêche) - 3,50 €</p>
+                <p>Limonade artisanale - 3,80 €</p>
+                <p>Jus bio (pomme, poire, orange, fraise) - 3,80 €</p>
+                <p>Bière sans alcool (blonde ou blanche) - 4,00 €</p>
+                <p>Boissons végétales froides (matcha, chocolat, café glacé) - 4,50 €</p>
+                <p>Eau pétillante - 3,00 €</p>
+                <p>Eau avec sirop (fraise, grenadine, violette, menthe, orgeat) - 2,00 €</p>
             </div>
 
             <div class="sweet">
                 <h3>🍰 Douceurs maison</h3>
 
-                <p>Crêpe (sucre, pâte choco-noisette, banane caramel, coulis fruits rouges) – 3,80 €</p>
-                <p>Fondant au chocolat – 3,80 €</p>
-                <p>Tartelette citron meringuée – 4,00 €</p>
-                <p>Cookie géant moelleux (choco-noisette ou chocolat blanc-framboise) – 3,50 €</p>
-                <p>Cheesecake au spéculoos – 4,20 €</p>
-                <p>Part de cake marbré ou banana bread – 3,50 €</p>
-                <p>Moelleux vegan au chocolat – 4,00 €</p>
+                <p>Crêpe (sucre, Nocciolata, banane caramel, coulis fruits rouges, confiture) - 3,80 €</p>
+                <p>Fondant au chocolat - 3,80 €</p>
+                <p>Tartelette citron meringuée - 4,00 €</p>
+                <p>Cookie géant moelleux (choco-noisette ou chocolat blanc-framboise) - 3,50 €</p>
+                <p>Cheesecake au spéculoos - 4,20 €</p>
+                <p>Part de cake marbré ou banana bread - 3,50 €</p>
+                <p>Moelleux vegan au chocolat - 4,00 €</p>
             </div>
 
             <div class="salty">
                 <h3>🧂Petite touche salée</h3>
 
-                <p>Tartine chaude du jour – 5,50 €</p>
-                <p>Mini quiche végétarienne – 4,80 €</p>
-                <p>Croque-mallow (jambon, fromage fondant & herbes) – 5,20 €</p>
-                <p>Hot dog (saucisse de porc ou vegan) – 4,50 €</p>
+                <p>Tartine chaude du jour - 5,50 €</p>
+                <p>Mini quiche végétarienne - 4,80 €</p>
+                <p>Croque-mallow (jambon, fromage fondant & herbes) - 5,20 €</p>
+                <p>Hot dog (saucisse de porc ou vegan) - 4,50 €</p>
             </div>
         </section>
 
