--- a/menu.html
+++ b/menu.html
@@ -95,9 +95,9 @@
     <!--Création du pied de page-->
     <footer>
         <div class="text-center">
-            <img src="media/logo_transparent.png">
+            <a href="#"><i class="fa-regular fa-circle-up fa-2x"></i></a>
             <br>
-            <i>Copyright Chat-Mallow Café 2025</i>
+            <p><i>Copyright Chat-Mallow Café 2025</i></p>
         </div>
 
         <div>
