--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
 
     <!--Création du pied de page-->
     <footer>
-        <div class="text-center">
-            <img src="media/logo_transparent.png">
+        <div class="scroll-up">
+            <a href="#"><i class="fa-regular fa-circle-up fa-2x"></i></a>
             <br>
-            <i>Copyright Chat-Mallow Café 2025</i>
+        <div class="text-center">
+            <p><i>Copyright Chat-Mallow Café 2025</i></p>
         </div>
 
         <div>
