--- a/contact.html
+++ b/contact.html
@@ -70,13 +70,13 @@
         </div>
 
         <div>
-            <a href="https://www.facebook.com" target="_blank">
+            <a href="https://www.facebook.com" target="_blank" alt="Facebook">
                 <i class="fa-brands fa-facebook fa-2x"></i>
             </a>
-            <a href="https://www.instagram.com" target="_blank">
+            <a href="https://www.instagram.com" target="_blank" alt="Instagram">
                 <i class="fa-brands fa-instagram fa-2x"></i>
             </a>
-            <a href="https://bsky.social/about" target="_blank">
+            <a href="https://bsky.social/about" target="_blank" alt="Bluesky">
                 <i class="fa-brands fa-bluesky fa-2x"></i>
             </a>
         </div>
