--- a/menu.html
+++ b/menu.html
@@ -85,7 +85,8 @@
         </section>
 
         <div class="center_menu">
-            <p>🥛 Toutes nos boissons chaudes peuvent être accompagnées de lait végétal (amande, avoine, ou soja) sans supplément.</p>
+            <p>🥛 Toutes nos boissons chaudes peuvent être accompagnées de lait végétal (amande, avoine, ou soja) sans
+                supplément.</p>
             <p>💧 Et bien sûr, de l'eau fraîche est toujours disponible gratuitement.</p>
             <img src="media/LOGO_FAITMAISON_clair_WEB.png" title="Logo Fait Maison" alt="Logo Fait Maison">
         </div>
@@ -101,13 +102,13 @@
         </div>
 
         <div>
-            <a href="https://www.facebook.com" target="_blank">
+            <a href="https://www.facebook.com" target="_blank" alt="Facebook">
                 <i class="fa-brands fa-facebook fa-2x"></i>
             </a>
-            <a href="https://www.instagram.com" target="_blank">
+            <a href="https://www.instagram.com" target="_blank" alt="Instagram">
                 <i class="fa-brands fa-instagram fa-2x"></i>
             </a>
-            <a href="https://bsky.social/about" target="_blank">
+            <a href="https://bsky.social/about" target="_blank" alt="Bluesky">
                 <i class="fa-brands fa-bluesky fa-2x"></i>
             </a>
         </div>
