--- a/menu.html
+++ b/menu.html
@@ -102,13 +102,13 @@
         </div>
 
         <div>
-            <a href="https://www.facebook.com" target="_blank" alt="Facebook">
+            <a href="https://www.facebook.com" target="_blank" title="Facebook">
                 <i class="fa-brands fa-facebook fa-2x"></i>
             </a>
-            <a href="https://www.instagram.com" target="_blank" alt="Instagram">
+            <a href="https://www.instagram.com" target="_blank" title="Instagram">
                 <i class="fa-brands fa-instagram fa-2x"></i>
             </a>
-            <a href="https://bsky.social/about" target="_blank" alt="Bluesky">
+            <a href="https://bsky.social/about" target="_blank" title="Bluesky">
                 <i class="fa-brands fa-bluesky fa-2x"></i>
             </a>
         </div>
