--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         <a href="about.html" title="Lien page à propos">Notre histoire</a>
         <a href="adopter.html" title="Lien page adopter">Coin des coups de cœur</a>
         <a href="menu.html" title="Lien page menu">Petites douceurs</a>
-        <a href="contact.html" title="Lien page contact" class="nav_active">Contactez-nous !</a>
+        <a href="contact.html" title="Lien page contact" class="nav_active">Contact</a>
     </nav>
     <!--Fin du menu de nav-->
 
@@ -37,7 +37,19 @@
 
         <section id="contact" class="text-center">
 
-            <h1 class="text-center">Quelque chose à nous dire ?</h1>
+            <h1 class="text-center">Une question, un petit mot doux ?</h1>
+
+            <p><b>Pour nous trouver :</b></p>
+
+            <div class="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d798.8578792608215!2d2.6354306480950345!3d50.530156261891705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dd225ea717dfa3%3A0xbc5e227ff8dcd292!2sNautilus!5e0!3m2!1sfr!2sfr!4v1747313015381!5m2!1sfr!2sfr"
+                width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+                title="Carte Google Maps pour trouver le Chat-Mallow Café à Béthune"></iframe>
+        </div>
+
+        <p><b>Pour nous parler :</b></p>
 
             <form>
                 <label>Nom *</label>
@@ -64,7 +76,7 @@
     <!--Création du pied de page-->
     <footer>
         <div class="text-center">
-            <a href="#"><i class="fa-regular fa-circle-up fa-2x"></i></a>
+            <a href="#" title="Retour en haut de la page"><i class="fa-regular fa-circle-up fa-2x"></i></a>
             <br>
             <p><i>Copyright Chat-Mallow Café 2025</i></p>
         </div>
