--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="about.html" title="Lien page à propos">Notre histoire</a>
         <a href="adopter.html" title="Lien page adopter">Coin des coups de cœur</a>
         <a href="menu.html" title="Lien page menu">Petites douceurs</a>
-        <a href="contact.html" title="Lien page contact">Contactez-nous !</a>
+        <a href="contact.html" title="Lien page contact">Contact</a>
     </nav>
     <!--Fin du menu de nav-->
 
@@ -43,13 +43,6 @@
                 petits félins tout en créant un lieu de détente unique pour nos visiteurs. 🐾</p>
             <p>Nous nous ferons un plaisir de vous accueillir au <b>48 Grand Place à Béthune</b>, du <b>mardi au
                     samedi, de 13h à 18h.</b></p>
-        </div><br>
-        <div class="map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d798.8578792608215!2d2.6354306480950345!3d50.530156261891705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dd225ea717dfa3%3A0xbc5e227ff8dcd292!2sNautilus!5e0!3m2!1sfr!2sfr!4v1747313015381!5m2!1sfr!2sfr"
-                width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-                title="Carte Google Maps pour trouver le Chat-Mallow Café à Béthune"></iframe>
         </div><br>
 
         <div>
@@ -98,7 +91,7 @@
     <!--Création du pied de page-->
     <footer>
         <div class="scroll-up">
-            <a href="#"><i class="fa-regular fa-circle-up fa-2x"></i></a>
+            <a href="#" title="Retour en haut de la page"><i class="fa-regular fa-circle-up fa-2x"></i></a>
             <br>
             <div class="text-center">
                 <p><i>Copyright Chat-Mallow Café 2025</i></p>
