--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
         <a href="about.html" title="Lien page à propos">Notre histoire</a>
         <a href="adopter.html" title="Lien page adopter">Coin des coups de cœur</a>
         <a href="menu.html" title="Lien page menu" class="nav_active">Petites douceurs</a>
-        <a href="contact.html" title="Lien page contact">Contactez-nous !</a>
+        <a href="contact.html" title="Lien page contact">Contact</a>
     </nav>
     <!--Fin du menu de nav-->
 
@@ -96,7 +96,7 @@
     <!--Création du pied de page-->
     <footer>
         <div class="text-center">
-            <a href="#"><i class="fa-regular fa-circle-up fa-2x"></i></a>
+            <a href="#" title="Retour en haut de la page"><i class="fa-regular fa-circle-up fa-2x"></i></a>
             <br>
             <p><i>Copyright Chat-Mallow Café 2025</i></p>
         </div>
